developing required paper ids parser

--- a/notebooks/0-dev-review_tools.ipynb
+++ b/notebooks/0-dev-review_tools.ipynb
@@ -5,7 +5,10 @@
    "id": "a0186732",
    "metadata": {},
    "source": [
-    "# Dev and Test arXiv API\n",
+    "# Dev: Papers IDs collector\n",
+    "\n",
+    "- arXiv API\n",
+    "- cleantext\n",
     "\n",
     "### References\n",
     "\n",
@@ -16,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9f83239e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "8e5f5d17",
    "metadata": {},
    "outputs": [
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "id": "5d5f3334",
    "metadata": {},
    "outputs": [],
@@ -82,97 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "63a2b26f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['notion',\n",
-       " 'bounded',\n",
-       " 'rationality',\n",
-       " 'originated',\n",
-       " 'insight',\n",
-       " 'perfectly',\n",
-       " 'rational',\n",
-       " 'behavior',\n",
-       " 'cannot',\n",
-       " 'realized',\n",
-       " 'agents',\n",
-       " 'limited',\n",
-       " 'cognitive',\n",
-       " 'computational',\n",
-       " 'resources',\n",
-       " 'research',\n",
-       " 'bounded',\n",
-       " 'rationality',\n",
-       " 'mainly',\n",
-       " 'initiated',\n",
-       " 'herbert',\n",
-       " 'simon',\n",
-       " 'longstanding',\n",
-       " 'tradition',\n",
-       " 'economics',\n",
-       " 'social',\n",
-       " 'sciences',\n",
-       " 'also',\n",
-       " 'plays',\n",
-       " 'major',\n",
-       " 'role',\n",
-       " 'modern',\n",
-       " 'ai',\n",
-       " 'intelligent',\n",
-       " 'agent',\n",
-       " 'design',\n",
-       " 'taking',\n",
-       " 'actions',\n",
-       " 'bounded',\n",
-       " 'resources',\n",
-       " 'requires',\n",
-       " 'agent',\n",
-       " 'reflect',\n",
-       " 'use',\n",
-       " 'resources',\n",
-       " 'optimal',\n",
-       " 'way',\n",
-       " 'hence',\n",
-       " 'reason',\n",
-       " 'make',\n",
-       " 'decisions',\n",
-       " 'metalevel',\n",
-       " 'paper',\n",
-       " 'look',\n",
-       " 'automated',\n",
-       " 'machine',\n",
-       " 'learning',\n",
-       " 'automl',\n",
-       " 'related',\n",
-       " 'problems',\n",
-       " 'perspective',\n",
-       " 'bounded',\n",
-       " 'rationality',\n",
-       " 'essentially',\n",
-       " 'viewing',\n",
-       " 'automl',\n",
-       " 'tool',\n",
-       " 'agent',\n",
-       " 'train',\n",
-       " 'model',\n",
-       " 'given',\n",
-       " 'set',\n",
-       " 'data',\n",
-       " 'search',\n",
-       " 'good',\n",
-       " 'way',\n",
-       " 'suitable',\n",
-       " 'ml',\n",
-       " 'pipeline',\n",
-       " 'deliberation',\n",
-       " 'metalevel']"
+       "['notion', 'bounded', 'rationality', 'originated', 'insight']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,21 +112,43 @@
     "                    punct=True ,# Remove all punctuations\n",
     "                    stp_lang='english'  # Language for stop words\n",
     ")\n",
-    "txt_cleaned"
+    "txt_cleaned[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5994a5df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'notion bounded rationality originated insight perfectly rational behavior cannot realized agents limited cognitive computational resources research bounded rationality mainly initiated herbert simon longstanding tradition economics social sciences also plays major role modern ai intelligent agent design taking actions bounded resources requires agent reflect use resources optimal way  hence reason make decisions metalevel paper look automated machine learning automl related problems perspective bounded rationality essentially viewing automl tool agent train model given set data search good way suitable ml pipeline deliberation metalevel'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleantext.clean(txt,\n",
+    "                    all= False, # Execute all cleaning operations\n",
+    "                    extra_spaces=True ,  # Remove extra white space \n",
+    "                    stemming=False , # Stem the words\n",
+    "                    stopwords=True ,# Remove stop words\n",
+    "                    lowercase=True ,# Convert to lowercase\n",
+    "                    numbers=True ,# Remove all digits \n",
+    "                    punct=True ,# Remove all punctuations\n",
+    "                    stp_lang='english'  # Language for stop words\n",
+    ")                "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eedc8a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5994a5df",
+   "id": "a97f4178",
    "metadata": {},
    "outputs": [],
    "source": []
