first data colection

--- a/notebooks/1-dev-paper_ids_collector.ipynb
+++ b/notebooks/1-dev-paper_ids_collector.ipynb
@@ -17,15 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "9f83239e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
     "import arxiv\n",
+    "from datetime import datetime\n",
+    "import ray\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -40,14 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "id": "db6667b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "month_i = datetime(2021,8,1)\n",
     "month_f = datetime(2021,9,1)\n",
-    "required_categories = ['math.ST', 'stat.ME', 'stat.AP', 'stat.CO', 'cs.LG', 'stat.ML', 'cs.AI']"
+    "required_categories = ['math.ST', 'stat.ME', 'stat.AP', 'stat.CO', 'cs.LG', 'stat.ML', 'cs.AI']\n",
+    "folder_output = 'datasets'"
    ]
   },
   {
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "e4e3f384",
    "metadata": {},
    "outputs": [],
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 35,
    "id": "a0cd99e5",
    "metadata": {},
    "outputs": [
@@ -91,8 +95,7 @@
      "output_type": "stream",
      "text": [
       "[info] Months to be collected = 1\n",
-      "[info] IDs to be collected per month = 300\n",
-      "[info] Total number of Ids to be collected= 300\n"
+      "[info] IDs to be collected per month = 100\n"
      ]
     }
    ],
@@ -101,11 +104,8 @@
     "months = [f'{str(month_i.year)[2:]}{\"%02d\"%dt.month}' for dt in pd.date_range(start=month_i, end=month_f, freq='M').to_pydatetime().tolist()]\n",
     "print(f'[info] Months to be collected = {len(months)}')\n",
     "# list of ids to be parsed\n",
-    "ids = [\"%05d\"%i for i in np.arange(0, 100000,1)][:300]\n",
-    "print(f'[info] IDs to be collected per month = {len(ids)}')\n",
-    "# final list of month/ids to be parsed\n",
-    "months_ids = list(np.array([[f'{m}.{i}' for i in ids] for m in months]).ravel())\n",
-    "print(f'[info] Total number of Ids to be collected= {len(months_ids)}')"
+    "ids = [\"%05d\"%i for i in np.arange(0, 100000,1)][:100]\n",
+    "print(f'[info] IDs to be collected per month = {len(ids)}')"
    ]
   },
   {
@@ -118,92 +118,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "446e8e1f",
+   "execution_count": 39,
+   "id": "dbdfbdca",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>short_id</th>\n",
-       "      <th>publised_dt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2108.00002v1</td>\n",
-       "      <td>2021-07-29 18:45:10+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2108.00003v1</td>\n",
-       "      <td>2021-07-29 23:30:02+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2108.00037v1</td>\n",
-       "      <td>2021-07-30 18:43:14+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2108.00043v1</td>\n",
-       "      <td>2021-07-30 19:02:32+00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2108.00045v1</td>\n",
-       "      <td>2021-07-30 19:08:44+00:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       short_id               publised_dt\n",
-       "0  2108.00002v1 2021-07-29 18:45:10+00:00\n",
-       "1  2108.00003v1 2021-07-29 23:30:02+00:00\n",
-       "2  2108.00037v1 2021-07-30 18:43:14+00:00\n",
-       "3  2108.00043v1 2021-07-30 19:02:32+00:00\n",
-       "4  2108.00045v1 2021-07-30 19:08:44+00:00"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> collecting month \"2108\"...\n",
+      "[info] Process time spent 0.45 minutes\n",
+      "[info] It was save 19 records.\n"
+     ]
     }
    ],
    "source": [
-    "data = [(paper.get_short_id(), paper.published) for paper in [get_ids(i) for i in months_ids] if not paper is None and len(list(set(paper.categories) & set(required_categories)))>0]\n",
-    "dfdata = pd.DataFrame(data, columns = ['short_id', 'publised_dt'])\n",
-    "dfdata.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "50bfe507",
-   "metadata": {},
-   "source": [
-    "## parelilize\n",
-    "https://stackoverflow.com/questions/9786102/how-do-i-parallelize-a-simple-python-loop"
+    "# loop of months\n",
+    "for month in months[::-1]:\n",
+    "    # display\n",
+    "    print(f'--> collecting month \"{month}\"...')\n",
+    "\n",
+    "    ## init ray\n",
+    "    ray.init()\n",
+    "\n",
+    "    @ray.remote\n",
+    "    def get_ids(month_id:str):\n",
+    "        try:\n",
+    "            return next(arxiv.Search(id_list=[month_id]).results())\n",
+    "        except:\n",
+    "            return None\n",
+    "\n",
+    "    @ray.remote\n",
+    "    def return_out(paper):\n",
+    "        return (paper.get_short_id(), paper.published)\n",
+    "\n",
+    "    # init time counter\n",
+    "    tic = datetime.now()\n",
+    "    # collect papers ids\n",
+    "    papers = ray.get([get_ids.remote(f'{month}.{i}') for i in ids])\n",
+    "    outs = [return_out.remote(paper) for paper in papers if not paper is None and len(list(set(paper.categories) & set(required_categories)))>0]\n",
+    "    # store in df\n",
+    "    dfdata = pd.DataFrame(ray.get(outs), columns = ['short_id', 'publised_dt'])\n",
+    "    # end time counter and estimate diference\n",
+    "    toc = datetime.now()\n",
+    "    tictoc = ((toc-tic).seconds)/60. # minutes\n",
+    "    # display\n",
+    "    print(f\"[info] Process time spent {tictoc} minutes\")\n",
+    "    # save output\n",
+    "    path_output = os.path.join(folder_output, f'table-id_papers_ia-{month}.csv')\n",
+    "    #dfdata.to_csv(path_output)\n",
+    "    print(f\"[info] It was save {dfdata.shape[0]} records.\")\n",
+    "    # shutdown ray\n",
+    "    ray.shutdown()"
    ]
   },
   {
