--- a/notebooks/0-dev-review_tools.ipynb
+++ b/notebooks/0-dev-review_tools.ipynb
@@ -20,13 +20,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9f83239e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0f933fe",
+   "metadata": {},
+   "source": [
+    "## parsing using beautifulsoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d5f6621e",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Find and print all li tags:\n",
+      "\n",
+      "a: :2109.08141\n",
+      "div: ['cs.CV', 'cs.AI', 'cs.LG']\n",
+      "p: 2021-09-16\n",
+      "\n",
+      "\n",
+      "a: :2109.08139\n",
+      "div: ['eess.SP', 'cs.LG', 'cs.NI', 'stat.ML']\n",
+      "p: 2021-09-16\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime, date\n",
+    "url = 'https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=&terms-0-field=title&classification-computer_science=y&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=hide&size=200&order=-announced_date_first&start=0'\n",
+    "reqs = requests.get(url)\n",
+    "soup = BeautifulSoup(reqs.text, 'lxml')\n",
+    "print(\"\\nFind and print all li tags:\\n\")\n",
+    "for tag in soup.find_all(\"li\", {\"class\": \"arxiv-result\"})[:2]:\n",
+    "    for tag_a in tag.find_all(\"a\")[:1]:\n",
+    "        print(\"{0}: {1}\".format(tag_a.name, tag_a.text.replace('arXiv', '').rstrip().lstrip()))\n",
+    "        \n",
+    "    for tag_d in tag.find_all(\"div\", {\"class\": \"tags is-inline-block\"})[:1]:\n",
+    "        print(\"{0}: {1}\".format(tag_d.name, [it.rstrip().lstrip() for it in tag_d.text.split('\\n') if it != '']))\n",
+    "        \n",
+    "    tag_p = tag.find_all(\"p\")[3]\n",
+    "    sdate = tag_p.text.split(';')[0].replace('Submitted', '').rstrip().lstrip()\n",
+    "    dt = datetime.strptime(sdate, '%d %B, %Y')\n",
+    "    print(\"{0}: {1}\".format(tag_p.name, date(dt.year, dt.month, dt.day)))\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0abbb85",
+   "metadata": {},
+   "source": [
+    "## arXiv API"
    ]
   },
   {
@@ -183,12 +249,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ec5e7ba",
+   "cell_type": "markdown",
+   "id": "19da204f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## cleantext tool"
+   ]
   },
   {
    "cell_type": "code",
